compiler/lume_parse/src/snapshots/lume_parse__tests__return_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"return;\")"
---
SOURCE_FILE@0..7
  RETURN_STMT@0..7
    RETURN_KW@0..6 "return"
    SEMICOLON@6..7 ";"
