compiler/lume_parse/src/snapshots/lume_parse__tests__scope_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { };\")"
---
SOURCE_FILE@0..12
  LET_STMT@0..12
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    SCOPE_EXPR@8..11
      BLOCK@8..11
        LEFT_BRACE@8..9 "{"
        WHITESPACE@9..10 " "
        RIGHT_BRACE@10..11 "}"
    SEMICOLON@11..12 ";"
