compiler/lume_parse/src/snapshots/lume_parse__tests__scope_snapshots@stmt_multi.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { 1; 5; };\")"
---
SOURCE_FILE@0..12
  LET_STMT@0..12
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    LEFT_BRACE@5..6 "{"
    STMT_LIST@6..10
      EXPR_STMT@6..8
        LITERAL@6..7
          INTEGER_LIT@6..7 "1"
        SEMICOLON@7..8 ";"
      EXPR_STMT@8..10
        LITERAL@8..9
          INTEGER_LIT@8..9 "5"
        SEMICOLON@9..10 ";"
    RIGHT_BRACE@10..11 "}"
    SEMICOLON@11..12 ";"
