compiler/lume_parse/src/snapshots/lume_parse__tests__self_snapshots@self.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"self;\")"
---
SOURCE_FILE@0..5
  EXPR_STMT@0..5
    VARIABLE_EXPR@0..4
      IDENT@0..4 "self"
    SEMICOLON@4..5 ";"
