compiler/lume_parse/src/snapshots/lume_parse__tests__self_snapshots@self_binary_op.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"self + self;\")"
---
SOURCE_FILE@0..12
  EXPR_STMT@0..12
    BIN_EXPR@0..11
      VARIABLE_EXPR@0..4
        NAME@0..4
          IDENT@0..4 "self"
      WHITESPACE@4..5 " "
      ADD@5..6 "+"
      WHITESPACE@6..7 " "
      VARIABLE_EXPR@7..11
        NAME@7..11
          IDENT@7..11 "self"
    SEMICOLON@11..12 ";"
